calc.html,rps.html,ttt.html added

--- a/index.html
+++ b/index.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bouzewazi</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <h1>Projects</h1>
     <div class="f1">
-        <div class="grid-container">
-            <div>
-                <p>Calculator</p>
-                <img src="images/calc resized.png" alt="Rekenmachine">
-            </div>
+      <div class="grid-container">
+        <a href="Calculator.html">
+          <div class="een">
+            <p class="naam">Calculator</p>
+            <img src="images/calc resized.png" alt="Rekenmachine" />
+          </div>
+        </a>
 
-            <div>
-                <p>Tic Tac Toe</p>
-                <img src="images/Jogo_da_velha_-_tic_tac_toe.png" alt="Tic Tac Toe">
-            </div>
+        <a href="ttt.html">
+          <div class="twee">
+            <p class="naam">Tic Tac Toe</p>
+            <img
+              src="images/Jogo_da_velha_-_tic_tac_toe.png"
+              alt="Tic Tac Toe"
+            />
+          </div>
+        </a>
 
-            <div>
-                <p>Rock Paper Scissors </p>
-                <img src="images/image_processing20200424-22029-mnjxw7.png" alt="Tic Tac Toe">
-            </div>  
+        <a href="rps.html">
+          <div class="drie">
+            <p class="naam">Rock Paper Scissors</p>
+            <img
+              src="images/image_processing20200424-22029-mnjxw7.png"
+              alt="Tic Tac Toe"
+            />
+          </div>
+        </a>
+      </div>
+
+      <footer>
+        <div class="container">
+          <p class="igcontact">Contact</p>
+          <div class="flexig">
+            <a href="https://www.instagram.com/" target="_blank">
+              <img
+                src="images/Instagram_logo_2022.svg.webp"
+                alt="Instagram_logo"
+              />
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="ig"
+            >
+              Instagram</a
+            >
+          </div>
         </div>
-
-        <footer>
-            <div class="container">
-                <p>Contact</p>
-
-                <a href="https://www.instagram.com/naoufalbzz/" target="_blank"> Instagram</a>
-            </div>
-
-        </footer>
-
+      </footer>
     </div>
-    
-</body>
+  </body>
 </html>
